--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ApiGatewayApplication",
+            "request": "launch",
+            "mainClass": "sap.ass2.apigateway.ApiGatewayApplication"
+        },
+        {
+            "type": "java",
             "name": "RegistryLauncher",
             "request": "launch",
             "mainClass": "sap.ass2.registry.RegistryLauncher",
