--- a/registry/pom.xml
+++ b/registry/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
