--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -1,15 +1,54 @@
 server:
   port: 10000
+
 spring:
   application:
     name: API-GATEWAY
-resilience4j:
-  circuitbreaker:
-    configs:
-      default:
-        slidingWindowSize: 10
-        failureRateThreshold: 50
-        waitDurationInOpenState: 10s
-        permittedNumberOfCallsInHalfOpenState: 3
-        minimumNumberOfCalls: 5
-        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+  cloud:
+    gateway:
+      routes:
+        - id: REGISTRY_ROUTE
+          uri: http://localhost:9000
+          predicates:
+            - Path=/api/registry/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: registryCircuitBreaker
+                fallbackUri: forward:/fallback/registry
+        - id: USERS_MANAGER_ROUTE
+          uri: http://localhost:9100
+          predicates:
+            - Path=/api/users/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: usersCircuitBreaker
+                fallbackUri: forward:/fallback/users
+        - id: EBIKES_MANAGER_ROUTE
+          uri: http://localhost:9200
+          predicates:
+            - Path=/api/ebikes/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: ebikesCircuitBreaker
+                fallbackUri: forward:/fallback/ebikes
+        - id: RIDES_MANAGER_ROUTE
+          uri: http://localhost:9300
+          predicates:
+            - Path=/api/rides/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: ridesCircuitBreaker
+                fallbackUri: forward:/fallback/rides
+
+    circuitbreaker:
+      resilience4j:
+        enabled: true
+
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
